<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BMICaculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="bmi">BMI</string>
    <string name="english">English</string>
    <string name="metric">Metric</string>
    <string name="pounds">Pounds</string>
    <string name="inches">Inches</string>

</resources>
