<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bmicaculator.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_gravity="left|center_vertical"
        android:text="@string/weight"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editW"
        android:layout_width="150dp"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="0"
        android:background="@android:color/holo_blue_light"
        android:digits=".0123456789"
        android:ems="10"
        android:maxLength="20"
        android:padding="@dimen/activity_vertical_margin"
        android:text="100" />

    <TextView
        android:id="@+id/textView2"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="1"
        android:text="@string/height"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editH"
        android:layout_width="150dp"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="1"
        android:background="@android:color/holo_green_light"
        android:digits=".0123456789"
        android:ems="10"
        android:maxLength="20"
        android:padding="@dimen/activity_vertical_margin"
        android:text="100" />

    <TextView
        android:id="@+id/textView3"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="2"
        android:text="@string/bmi"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textBMI"
        android:layout_width="120dp"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="2"
        android:background="@android:color/holo_orange_light"
        android:padding="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/BMIInfo"
        android:layout_width="120dp"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="3"
        android:background="@android:color/holo_orange_dark"
        android:padding="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioUnits"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="4" >

        <RadioButton
            android:id="@+id/raEng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/raMet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metric" />
    </RadioGroup>

    <TextView
        android:id="@+id/WUnit"
        android:layout_width="wrap_content"
        android:layout_column="2"
        android:layout_gravity="left|center_vertical"
        android:layout_row="0"
        android:text="@string/pounds"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/HUnit"
        android:layout_width="wrap_content"
        android:layout_column="2"
        android:layout_gravity="left|center_vertical"
        android:layout_row="1"
        android:text="@string/inches"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <Space />

</GridLayout>
